# clinic_api

./: .flake8  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: admin.py  models.py  urls.py
app/api/: permissions.py
app/api/auth/: serializers.py  views.py
app/api/crud/: serializers.py  views.py
app/migrations/: 0001_initial.py
core/: settings.py
